<resources>
    <string name="app_name">ITCQ</string>
    <string name="app_descr">ITCQ - IT and Computer Quiz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Menu-->
    <string name="share_app">Sharing</string>
    <string name="share_via">Share via</string>
    <string name="play_store">Download the app from the Play Store!</string>
    <string name="play_store_link">https://play.google.com/store/apps/details?id=com.software.claudiofus.itcq</string>

    <!--Fragment home-->
    <string name="welcome">Welcome in ITCQ \n IT and Computer quiz</string>
    <string name="home">Home</string>
    <string name="quiz">Quiz</string>
    <string name="category">Category</string>
    <string name="graphs">Graphs</string>
    <string name="settings">Settings &amp; Help</string>
    <string name="help">Help</string>
    <string name="share">Share</string>
    <string name="back_button">Press again to exit</string>

    <!--Fragment quiz-->
    <string name="next">Next</string>
    <string name="why">Why?</string>
    <string name="no_selected_dialog">I remind you that for each correct question 1 point is assigned, 0.5 for each unanswered question, 0 for each wrong question. \n\nAre you sure you do not want to answer?</string>

    <!--Fragment Graphs-->
    <string name="correctText">CORRECT</string>
    <string name="unansText">UNANSWERED</string>
    <string name="wrongText">WRONG</string>
    <string name="score">Score</string>
    <string name="no_score_av">Not enough data, train more in next days!</string>

    <!--Fragment settings -->
    <string name="change_color">Change the color of the application in:</string>
    <string name="rules">Score is calculated with weighted average: \n&#8226; 1 point to each correct answer\n&#8226; 0.5 points to each unanswered question\n&#8226; 0 points to each wrong answer</string>
    <string name="quizRules">The quiz is endless so you can think about the answer or you can cheat (not recommended)!</string>

    <!--Ads-->
    <string name="ad_unit_home">ca-app-pub-3334078095194784/7287301655</string>
    <string name="ad_unit_quiz">ca-app-pub-3334078095194784/2561588580</string>
    <string name="ad_unit_category">ca-app-pub-3334078095194784/2170706345</string>
    <string name="ad_unit_graphs">ca-app-pub-3334078095194784/8879584925</string>
    <string name="ad_unit_settings">ca-app-pub-3334078095194784/7566503253</string>
</resources>