<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context=".fragments.GraphsFragment">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/mChart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/table"
        android:layout_alignParentStart="true"/>

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/adViewGraphs"
        android:gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/correctText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/button_margin12"
                android:text="@string/correctText"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/unansText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/button_margin12"
                android:text="@string/unansText"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/wrongText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/button_margin12"
                android:text="@string/wrongText"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/correct"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/button_margin12"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/unanswered"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/button_margin12"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/wrong"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/button_margin12"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"/>
        </TableRow>

    </TableLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewGraphs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/ad_unit_graphs"/>

</RelativeLayout>